--- a/src/Styles/Recipes.css
+++ b/src/Styles/Recipes.css
@@ -1,15 +1,17 @@
 .recipe-list{
     position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 3fr));
+    grid-gap: 20px; 
     margin-top: 55px;
+    margin-left: 285px;
+    margin-right: 294px;
 }
 
 .add-menu{
     margin-top: 66px;
     margin-bottom: -55px;
-    margin-left: 127px;
+    margin-left: 288px;
 }
 
 .btn-add {
